# double-inverted-pendulum-on-a-cart

./: .gitattributes  ALL_REFERENCES_DIP_Elyes_KHECHINE_Ayoub_HEDFI_Elyes_CHAMEKH.docx  Project_Presentation_DIP_Elyes_KHECHINE_Ayoub_HEDFI_Elyes_CHAMEKH.pptx  README.md
LabVIEW/: Dependencies_LabVIEW_DIP_Elyes_KHECHINE_Ayoub_HEDFI_Elyes_CHAMEKH.txt
LabVIEW/References/: REFERENCE_Quanser_Linear_Double_Inverted_Pendulum.txt
LabVIEW/Resources/: CL_HIL_Read_Encoder_Vector.jfif  Get Path (1).jfif  Get Windows File Locations.vi  Get Windows File Locations_80.vi  data analysis5 (1).vi  data analysis5.vi  getHTTP.jfif  http_get_document.jfif  rtaImage (1).jfif  rtaImage.jfif
LabVIEW/Simulation_Files/: LQR_Controller_LabVIEW_DIP_Elyes_KHECHINE_Ayoub_HEDFI_Elyes_CHAMEKH.vi  LabVIEW_DIP_Elyes_KHECHINE_Ayoub_HEDFI_Elyes_CHAMEKH.lvlps  LabVIEW_DIP_Elyes_KHECHINE_Ayoub_HEDFI_Elyes_CHAMEKH.lvproj  State-Space_Model_LabVIEW_DIP_Elyes_KHECHINE_Ayoub_HEDFI_Elyes_CHAMEKH  Swing-up_Python_Simulation Data_LabVIEW_DIP_Elyes_KHECHINE_Ayoub_HEDFI_Elyes_CHAMEKH.vi  (+1 more)
RL_Optimal_Control_Policies/: Dependencies_RL_DIP_Elyes_KHECHINE_Ayoub_HEDFI_Elyes_CHAMEKH.txt
ROS_LQR_Controller/: Dependencies_ROS_DIP_Elyes_KHECHINE_Ayoub_HEDFI_Elyes_CHAMEKH.txt
ROS_LQR_Controller/Simulation_Files/dip_ros_robot_control/: CMakeLists.txt  package.xml
ROS_LQR_Controller/Simulation_Files/dip_ros_robot_control/launch/: dip_ros_robot_control.launch  dip_ros_robot_rqt.launch  dip_ros_robot_rqt.perspective
ROS_LQR_Controller/Simulation_Files/dip_ros_robot_control/src/: lqr_controller.cpp
(+44 files in other folders)
